tweaks in dates

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h3 data-dropdown data-dropdown-target="#day1" class="Text Text--spaced u-underlined u-overlined u-clickable u-offsetParent">March 20th 2018<span class="Schedule-toggle"><i class="Caret"></i></span></h3>
             <ul id="day1" class="List Dropdown is-expanded">
               <div class="Dropdown-content">
-                <li class="List-item Schedule-event Schedule-event--" data-event data-track="">
+                <li class="List-item Schedule-event Schedule-event--" data-event data-track="featured">
                   <div class="Grid Grid--collapsed">
                     <div class="Grid-cell u-size1of4 Text Schedule-eventTime"><i class="Schedule-mark"></i> 17:30 
                       <div class="Schedule-eventTimeEnd">-&nbsp;April 8th, 2018- 17:30
@@ -150,15 +150,15 @@
                     </div>
                   </div>
                   <div class="Schedule-eventDescription">
-                    <p>43663t53</p>
+                    <p>Registration for the Machine Learning Bootcamp begins on March 20th.</p>
                   </div>
                 </li>
                </div>
-</div>
-
+              </ul>
+            </div>
 <!------------------------------------------------------------------->
           <div class="Schedule-day">
-            <h3 data-dropdown data-dropdown-target="#day2" class="Text Text--spaced u-underlined u-overlined u-clickable u-offsetParent">March 8th 2018<span class="Schedule-toggle"><i class="Caret"></i></span></h3>
+            <h3 data-dropdown data-dropdown-target="#day2" class="Text Text--spaced u-underlined u-overlined u-clickable u-offsetParent">April 8th 2018<span class="Schedule-toggle"><i class="Caret"></i></span></h3>
             <ul id="day2" class="List Dropdown">
               <div class="Dropdown-content">
            
@@ -177,13 +177,13 @@
                   </div>
                 </li>
 
-                <li class="List-item Schedule-event Schedule-event--" data-event data-track="">
+                <li class="List-item Schedule-event Schedule-event--" data-event data-track="Discuss and Build">
                   <div class="Grid Grid--collapsed">
                     <div class="Grid-cell u-size1of4 Text Schedule-eventTime"><i class="Schedule-mark"></i>19:30
                       <div class="Schedule-eventTimeEnd">
                       </div>
                     </div>
-                    <div class="Grid-cell u-size3of4">
+                    <div class="Grid-cell u-size3of4">  
                       <p class="Text Schedule-title">Informal discussion on ML</p>
      </div>
 </div>
@@ -192,12 +192,13 @@
                   </div>
 
                 </li>
-               </div>
-</div>
+                </div>
+              </ul>
+              
 
 <!------------------------------------------------------------------->
  <div class="Schedule-day">
-            <h3 data-dropdown data-dropdown-target="#day3" class="Text Text--spaced u-underlined u-overlined u-clickable u-offsetParent">March 18th 2018<span class="Schedule-toggle"><i class="Caret"></i></span></h3>
+            <h3 data-dropdown data-dropdown-target="#day3" class="Text Text--spaced u-underlined u-overlined u-clickable u-offsetParent">April 18th 2018<span class="Schedule-toggle"><i class="Caret"></i></span></h3>
             <ul id="day3" class="List Dropdown">
               <div class="Dropdown-content">
                            <li class="List-item Schedule-event Schedule-event--collaboration" data-event data-track="collaboration">
@@ -231,6 +232,7 @@
               </div>
             </ul>
           </div>
+
           </div>
         </div>
       </div>
